Revision history for Perl suite Locale::Maketext

2012-01-14
    * Minor POD documentation update to sync with upstream blead.

2011-12-23
    * No changes. Production release after CPAN testers cleared.

2011-12-14
    * Update to 1.19_01 from upstream blead for release testing

    Fix broken URLs in dist/Locale-Maketext/lib/Locale/Maketext/TPJ13.pod for RFCs

    Keep verbatim pod in various dist/* pods within 79 cols

2011-05-25
    * Update to 1.19 from upstream blead

    [perl #89896] Locale::Maketext test failure
    when environment has variable containing unbalanced brackets

    Suppress "Name used only once" warnings.

    [perl #81888] Fix typos (spelling errors) in dist/*

2010-10-20
    * Release 1.17

    Test release of 1.16_01, versioning even deprecated Guts modules.
    This prevents CPAN upgrade circular heck. Thanks BinGOs

    Tested version fix for CPAN by BinGOs. Bump to stable version and release to public
	
2010-10-07
    * Release 1.16

    Blead commit bac7bf8 - Copy @_ to @_ to de-alias passed variables
    to assure that the aliases cannot be altered during maketext calls.

    Fix for CPAN RT #40727: infinite loop in
    Locale::Maketext::Guts::_compile() when working with tainted values

    Fix for CPAN RT #34182: Don't localize $@. 
    ->maketext calls will now backup and restore $@ so that die messages are not suppressed.

    Fix for CPAN RT #55461
    %hash deprecated messages cleaned up with perl 5.12

    Fix for CPAN RT #48118. Perl 76674
    Speed and efficiency tweaks in _compile calls when string has no ~][ in it.

    Fix for CPAN RT #48808. Perl 76668
    I18N::LangTags use() fixups.

2010-06-22
    * Release 1.15 (included in perl 5.13.3; not released separately)

    Locale::Maketext guts have been merged back into the main module

    Fix for CPAN RT #46738. Perl 76354
    Support for RO Lexicon hashes (External cache support)

2009-11-20
    * Release 1.14 (included in perl 5.11.2; not released separately)
